feat: async torii wasm functions & type conversions

--- a/Assets/WebGLTemplates/Dojo/index.html
+++ b/Assets/WebGLTemplates/Dojo/index.html
@@ -132,7 +132,10 @@
       loadingBar.style.display = "block";
 
       var dojoScript = document.createElement("script");
-      dojoScript.src = "TemplateData/dojo.js/torii_client_wasm.js";
+      dojoScript.src = "TemplateData/dojo.js/torii_c.js";
+      dojoScript.onload = async () => {
+        await wasm_bindgen();
+      };
       document.body.appendChild(dojoScript);
 
       var gameInstance = null;
