refactor: use starknet-rs wasm. starknetjs too slow

--- a/Assets/WebGLTemplates/Dojo/index.html
+++ b/Assets/WebGLTemplates/Dojo/index.html
@@ -132,7 +132,7 @@
       loadingBar.style.display = "block";
 
       var dojoScript = document.createElement("script");
-      dojoScript.src = "TemplateData/dojo.js/torii_c.js";
+      dojoScript.src = "TemplateData/dojo.c.js/dojo_c.js";
       dojoScript.onload = async () => {
         await wasm_bindgen();
       };
