feat(webgl): native controller support & interop

--- a/Assets/WebGLTemplates/Dojo/index.html
+++ b/Assets/WebGLTemplates/Dojo/index.html
@@ -166,6 +166,11 @@
 
       document.body.appendChild(script);
 
+      var controllerScript = document.createElement("script");
+      controllerScript.src = "TemplateData/controller/index.js"; // @controller
+      controllerScript.type = "module"; // @controller
+      document.body.appendChild(controllerScript); // @controller
+
     </script>
   </body>
 </html>
